[package]
name = "proc-quote"
version = "0.3.2"
authors = ["PedroGonçaloCorreia <goncalerta@gmail.com>"]
description = "A procedural macro implementation of quote!."
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["syn", "quote", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/Goncalerta/proc-quote"
edition = "2018"

[workspace]
members = [ "proc-quote-impl" ]

[dependencies]
proc-quote-impl = { version = "0.3", path = "./proc-quote-impl" }
quote = "1.0"
proc-macro-hack = "0.5"
proc-macro2 = { version = "1.0", default-features = false }
# TODO(blocked on rust-lang/rust#54723)
# https://github.com/rust-lang/rust/issues/54723
# Remove syn dependency once `new_raw` is stabilized
syn = "1.0"

[badges]
travis-ci = { repository = "Goncalerta/proc-quote" }
