[package]
name = "proc-quote-impl"
version = "0.1.1"
authors = ["PedroGonçaloCorreia <goncalerta@gmail.com>"]
description = "A procedural macro implementation of quote!."
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["syn", "quote", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/Goncalerta/proc-quote"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = { version = "0.6.11" }
proc-macro-hack = "0.5.4"
proc-macro2 = { version = "0.4.27", default-features = false }